--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,10 +13,11 @@ sphinx:
 formats:
    - pdf
 
-# Optionally set the version of Python and requirements required to build your docs
-python:
-   version: "3.8"
-   install:
+# # Optionally set the version of Python and requirements required to build your docs
+# python:
+#    version: "3.8"
+#    install:
+#    - requirements: docs/requirements.txt
   
 conda:
   environment: environment.yml
